--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Lumen
+APP_NAME=LaraAuth
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -10,10 +10,10 @@ LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PORT=8889
+DB_DATABASE=lara_auth
+DB_USERNAME=root
+DB_PASSWORD=root
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
