--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.3|^8.0",
-        "laravel/lumen-framework": "^8.0"
+        "php": "^7.2.5",
+        "laravel/lumen-framework": "^7.0",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "phpunit/phpunit": "^9.3",
-        "tymon/jwt-auth": "^1.0"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
